# leistungsnachweis-mamatofe

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.html  documentation.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
Präsentation/: sudokusolver.pptx
_sources/: build.rst.txt  documentation.rst.txt  index.rst.txt
app/: CMakeLists.txt
app/src/: main.cpp
app/test/: CMakeLists.txt  sodukotest.cpp
doc/: Doxyfile  Makefile  build.rst  conf.py  documentation.rst  index.rst  make.bat  usage.rst
lib/: CMakeLists.txt
lib/include/: suso.h
lib/src/: suso.cpp
lib/test/: CMakeLists.txt  sudokutest.cpp  suso_test.cpp
lib/test/testdata/: sampleBadFile1.csv  sampleBadFile3.csv
testdata/: SolHiddenSingleBlock.csv  SolHiddenSingleColumn.csv  SolHiddenSingleRow.csv  checkSolvability.csv  hardSudoku.csv  hiddenSingleBlock.csv  hiddenSingleColumn.csv  hiddenSingleRow.csv  sampleBadFile2.csv  sampleBadFile4.csv  sampleFile.csv  sampleFile2.csv  sampleFileSol.csv
